Modifies the Motorcycle class (model to make it an entity), MotorcycleController, and MotorcycleService, and creates the MotorcycleRepository interface to establish a connection with the PostgreSQL database. The @Autowired annotation was added for dependency injection