@@ -1,11 +1,11 @@
 package org.hornetsa.controller;
 
-
 import org.hornetsa.errors.ErrorMessage;
 import org.hornetsa.model.Motorcycle;
 import org.hornetsa.services.MotorcycleService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
@@ -13,41 +13,38 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/motorcycles")
 public class MotorcycleController {
 
-
+    @Autowired
+    private MotorcycleService motorcycleService;
 
     @RequestMapping("/healthcheck")
-    public String healthCheck(){
-        return "motorcycle Service OK!";
+    public String healthCheck() {
+        return "Motorcycle Service OK!";
     }
 
-    @GetMapping
-    public ResponseEntity<List<Motorcycle>> getAllMotorcycles(@RequestParam(value = "helmetIncluded", required = false) Boolean helmetIncluded, @RequestParam(value = "absBrake", required = false) Boolean absBrake) {
-        MotorcycleService motorcycleService = MotorcycleService.getMotorcycleService();
+    @GetMapping("/get")
+    public ResponseEntity<List<Motorcycle>> getAllMotorcycles(
+            @RequestParam(value = "helmetIncluded", required = false) Boolean helmetIncluded,
+            @RequestParam(value = "absBrake", required = false) Boolean absBrake) {
 
-        // Obtener la lista completa de motocicletas
         List<Motorcycle> motorcycles = motorcycleService.getMotorcycles();
 
-        // Filtrar por casco incluido si se especifica
         if (helmetIncluded != null) {
             motorcycles = motorcycles.stream()
                     .filter(m -> m.isHelmetIncluded() == helmetIncluded)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
-        // Filtrar por frenos ABS si se especifica
         if (absBrake != null) {
             motorcycles = motorcycles.stream()
                     .filter(m -> m.isAbsBrake() == absBrake)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
-        // Verificar si la lista resultante está vacía
         if (motorcycles.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
@@ -55,74 +52,53 @@ public class MotorcycleController {
         return ResponseEntity.ok(motorcycles);
     }
 
-
     @GetMapping("/search")
-    public ResponseEntity<Motorcycle> searchMotorcycle(@RequestParam("id") Optional<Integer> id, @RequestParam("snid") Optional<String> snid){
-        MotorcycleService motorcycleService = MotorcycleService.getMotorcycleService();
+    public ResponseEntity<Motorcycle> searchMotorcycle(@RequestParam("id") Optional<Integer> id,
+                                                       @RequestParam("snid") Optional<String> snid) {
 
-        Motorcycle motorcycle = motorcycleService.getMotorcycle(id.orElse(-1), snid.orElse(null)).stream().findFirst().orElse(null);
+        Motorcycle motorcycle = motorcycleService.getMotorcycles().stream()
+                .filter(m -> (id.isPresent() && m.getId() == id.get()) ||
+                        (snid.isPresent() && m.getSnid().equals(snid.get())))
+                .findFirst()
+                .orElse(null);
 
         if (motorcycle == null) return ResponseEntity.notFound().build();
 
         return ResponseEntity.ok(motorcycle);
     }
 
-
     @PostMapping("/add")
-    public ResponseEntity<Motorcycle> addMotorcycle(@RequestBody Motorcycle motorcycle, BindingResult result){
-        if (result.hasErrors()){
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    this.formatMessage(result));
+    public ResponseEntity<Motorcycle> addMotorcycle(@RequestBody Motorcycle motorcycle, BindingResult result) {
+        if (result.hasErrors()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, this.formatMessage(result));
         }
 
-        try {
-            MotorcycleService motorcycleService = MotorcycleService.getMotorcycleService();
-            motorcycleService.postMotorcycle(motorcycle);
-        } catch (Exception e){
-            return ResponseEntity.badRequest().build();
-        }
-
-        return ResponseEntity.ok(motorcycle);
+        return ResponseEntity.ok(motorcycleService.addMotorcycle(motorcycle));
     }
 
-
-    /*@PostMapping(value = "/adds")
-    public void setId(@RequestParam("id") Optional<String> id){
-        this.id = id.isPresent() ? id.get() : this.id;
-    }*/
-
     @DeleteMapping("/delete/{id}")
-    public ResponseEntity<String> deleteMotorcycle(@PathVariable("id") int id){
-        MotorcycleService motorcycleService = MotorcycleService.getMotorcycleService();
+    public ResponseEntity<String> deleteMotorcycle(@PathVariable("id") int id) {
         motorcycleService.deleteMotorcycle(id);
-        return ResponseEntity.ok("Motocicleta eliminada");
+        return ResponseEntity.ok("Motorcycle deleted");
     }
 
     @PutMapping("/update/{id}")
-    public ResponseEntity<Motorcycle> updateMotorcycle(@PathVariable("id") int id,  @RequestBody Motorcycle motorcycle, BindingResult result){
-        if (result.hasErrors()){
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    this.formatMessage(result));
+    public ResponseEntity<Motorcycle> updateMotorcycle(@PathVariable("id") int id,
+                                                       @RequestBody Motorcycle motorcycle, BindingResult result) {
+        if (result.hasErrors()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, this.formatMessage(result));
         }
 
-        try {
-            MotorcycleService motorcycleService = MotorcycleService.getMotorcycleService();
-            motorcycleService.update(id, motorcycle);
-        } catch (Exception e){
-            return ResponseEntity.badRequest().build();
-        }
-
-        return ResponseEntity.ok(motorcycle);
+        return ResponseEntity.ok(motorcycleService.updateMotorcycle(id, motorcycle));
     }
 
-
-    private String formatMessage(BindingResult result){
-        List<Map<String,String>> errores = result.getFieldErrors().stream()
+    private String formatMessage(BindingResult result) {
+        List<Map<String, String>> errores = result.getFieldErrors().stream()
                 .map(err -> {
-                    Map<String,String> error = new HashMap<>();
+                    Map<String, String> error = new HashMap<>();
                     error.put(err.getField(), err.getDefaultMessage());
                     return error;
-                }).collect(Collectors.toList());
+                }).toList();
 
         ErrorMessage errorMessage = ErrorMessage.builder()
                 .code("01")
@@ -139,28 +115,4 @@ public class MotorcycleController {
 
         return jsonString;
     }
-
-    //TEST METHOD QA
-    @PostMapping("/addMultiple")
-    public ResponseEntity<List<Motorcycle>> addMotorcycles(@RequestBody List<Motorcycle> motorcycles, BindingResult result) {
-        if (result.hasErrors()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, this.formatMessage(result));
-        }
-
-        MotorcycleService motorcycleService = MotorcycleService.getMotorcycleService();
-
-        List<Motorcycle> createdMotorcycles = new ArrayList<>();
-
-        try {
-            for (Motorcycle motorcycle : motorcycles) {
-                motorcycleService.postMotorcycle(motorcycle); // Llama al servicio para guardar cada motocicleta
-                createdMotorcycles.add(motorcycle); // Añade la motocicleta creada a la lista de respuesta
-            }
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().build();
-        }
-
-        return ResponseEntity.ok(createdMotorcycles);
-    }
-    
 }
